gatekeeper/namespaced/blackbox-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: blackbox-exporter
  name: blackbox-exporter
spec:
  ports:
    - name: blackbox-exporter
      protocol: TCP
      port: 9115
      targetPort: 9115
  selector:
    app: blackbox-exporter
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackbox-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blackbox-exporter
  template:
    metadata:
      name: blackbox-exporter
      labels:
        app: blackbox-exporter
    spec:
      containers:
        - name: blackbox-exporter
          image: prom/blackbox-exporter:v0.12.0
          args:
            - --config.file=/etc/blackbox/config.yml
          ports:
            - name: tcp
              containerPort: 9115
          volumeMounts:
            - name: config-volume
              mountPath: /etc/blackbox
            - name: tls
              mountPath: /etc/tls
      volumes:
        - name: config-volume
          configMap:
            name: blackbox-exporter
        - name: tls
          secret:
            secretName: gatekeeper-webhook-server-cert
