gatekeeper/namespaced/gatekeeper-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8888"
    prometheus.io/scrape: "true"
  name: gatekeeper-metrics
spec:
  ports:
    - name: http
      port: 8888
      protocol: TCP
  selector:
    control-plane: controller-manager
    gatekeeper.sh/operation: webhook
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8888"
    prometheus.io/scrape: "true"
  name: gatekeeper-audit-metrics
spec:
  ports:
    - name: http
      port: 8888
      protocol: TCP
  selector:
    control-plane: audit-controller
    gatekeeper.sh/operation: audit
