gatekeeper/namespaced/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: sys-gatekeeper
        - namespaceSelector:
            matchLabels:
              name: sys-prom
  egress:
    - {}
